# EquationRecognition

./: CMakeLists.txt  README.md  dependencies.sh  main.cpp
GSL/: CMakeLists.txt
GSL/libs/: libgslcblas.so.0.0.0
GUI/: CMakeLists.txt  cgui.cpp  cgui.h  cgui.ui
OCR/: AbstractSolver.h  ArthmeticSolver.cpp  ArthmeticSolver.h  CMakeLists.txt  EqualSolver.cpp  EqualSolver.h  Evaluator.cpp  Evaluator.h  ImageProcessing.cpp  ImageProcessing.h  OCR.cpp  OCR.h  SolverFactory.cpp  SolverFactory.h
OCR/unittests/: CMakeLists.txt  ev_unittests.cpp  ocr_unittests.cpp
OpenCV/: CMakeLists.txt
OpenCV/lib/: libopencv_calib3d.so.2.4.9  libopencv_contrib.so.2.4.9  libopencv_features2d.so.2.4.9  libopencv_flann.so.2.4.9  libopencv_gpu.so.2.4.9  libopencv_highgui.so.2.4.9  libopencv_imgproc.so.2.4.9  libopencv_legacy.so.2.4.9  libopencv_ml.so.2.4.9  libopencv_nonfree.so.2.4.9  libopencv_objdetect.so.2.4.9  libopencv_ocl.so.2.4.9  libopencv_photo.so.2.4.9  libopencv_stitching.so.2.4.9  libopencv_superres.so.2.4.9  libopencv_video.so.2.4.9  libopencv_videostab.so.2.4.9  script.sh
Tesseract/: CMakeLists.txt
Tesseract/lib/: liblept.la  libtesseract.la
